--- a/config/locales/archidate.en.yml
+++ b/config/locales/archidate.en.yml
@@ -1,4 +1,4 @@
-# TODO
-  
-  en:
-    hello: "Hello world"
+# TODO: tradurre in inglese dopo riordino generale di locales
+
+en:
+  hello: "Hello world"
