--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,72 +1,5 @@
 # Common keys
 
+# TODO: tradurre in inglese dopo riordino generale di locales
 en:
-  created_at: "Created at"
-  updated_at: "Updated at"
-  updated_by: "Updated by user"
-  unsaved_record: "Unsaved record"
-  identifier: "Identifier"
-  previous: "&laquo; prev"
-  next: "next &raquo;"
-  dashboard: "Dashboard"
-  loading_message: "Loading..."
-  new: "New"
-  save: "Save"
-  preview: "Preview"
-  save_and_continue: "Save"
-  save_and_add_new: "Add new"
-  show: "Show"
-  edit: "Edit"
-  close: "Close"
-  cancel: "Cancel"
-  destroy: "Destroy"
-  alert_no_recovery: "This action cannot be undone."
-  back: "Back"
-  are_you_sure: "Are you sure?"
-  description_area: "Description"
-  identification_area: "Identification"
-  access_area: "Access" # "Access and use"
-  contact_area: "Contact"
-  relationships_area: "Relationships"
-  sources_area: "Sources"
-  headings_area: "Headings"
-  other_information_area: "Other information area"
-  active: "active"
-  places: "Places"
-  date_event: "Dates"
-  start_date_event: "Start date"
-  end_date_event: "End date"
-  event_note: "Event note"
-  new_event: "New event"
-  activate: "activate"
-  deactivate: "deactivate"
-  new_record: "New record"
-  edit_record: "Edit record"
-  show_record: "Show record"
-  O: "open"
-  C: "closed"
-  PU: "public"
-  PR: "private"
-  AU: "authorized_name"
-  PA: "parallel_name"
-  AC: "acronym"
-  OT: "other_name"
-  blank_field: "Blank"
-  warning_field: "Not present"
-  merge_with: "Merge with..."
-  time:
-    formats:
-      file_timestamp: "%Y-%m-%d_%H-%M-%S"
-  activerecord:
-    errors:
-      # activerecord.errors.models.[model_name].attributes.[attribute_name]
-      # activerecord.errors.models.[model_name]
-      # activerecord.errors.messages
-      models:
-        unit:
-          not_matching_parent_and_fond: "Fond and parent unit don't match"
-          not_matching_fond_and_root_fond: "Fond and root fond don't match"
-          not_allowed_ancestry_depth: "Subunit creation not allowed at this livello"
-        fond:
-          at_most_one_custodian: "Fonds can belong to at most one custodian"
-
+  hello: "Hello World"
