--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -42,8 +42,6 @@ it:
   new_record: "Nuova scheda"
   edit_record: "Modifica scheda"
   show_record: "Anteprima scheda"
-  O: "in corso"
-  C: "concluso"
   PU: "pubblico"
   PR: "privato"
   AU: "altra denominazione principale"
@@ -56,7 +54,7 @@ it:
   count:
     creators:
         one: "&Egrave; stato trovato %{count} soggetto produttore."
-        other: "Sono stati trovati %{count} soggetti produttori."  
+        other: "Sono stati trovati %{count} soggetti produttori."
     custodians:
         one: "&Egrave; stato trovato %{count} soggetto conservatore."
         other: "Sono stati trovati %{count} soggetti conservatori."
@@ -142,6 +140,33 @@ it:
         one: "Export"
         other: "Exports"
     attributes:
+      fond:
+        description: "Contenuto"
+        position: "Posizione"
+        fond_type: "Tipologia del livello di descrizione"
+        name: "Denominazione"
+        extent: "Consistenza"
+        archival_extent: "Consistenza archivistica"
+        length: "Metri lineari"
+        units_count: "Unità archivistiche"
+        arrangement_note: "Nota dell'archivista"
+        related_materials: "Documentazione collegata"
+        access_condition: "Condizione di accesso"
+        access_condition_note: "Note alla condizione di accesso"
+        use_condition: "Condizione di riproduzione"
+        use_condition_note: "Note alla condizione di riproduzione"
+        preservation: "Stato di conservazione"
+        preservation_note: "Note sullo stato di conservazione"
+        history: "Storia archivistica"
+        fond_owners: "Soggetti titolari"
+        fond_urls: "Collegamenti"
+        fond_note: "Appunti di servizio"
+        level: "Livello"
+        fond_editors: "Compilatori"
+        fond_editor: "Compilatore"
+        preferred_event: "Estremi cronologici"
+        event_note: "Note alla data"
+        other_names: "Altre denominazioni"
       unit:
         id: 'ID'
         position: "Posizione"
@@ -188,4 +213,30 @@ it:
         creation_number: "Numero scheda"
         fond_name: "Classificazione"
         preferred_event: "Estremi cronologici"
-
+      project:
+        description: "Descrizione"
+        project_type: "Tipologia d'intervento"
+        project_managers: "Responsabili di progetto"
+        project_stakeholders: "Soggetti coinvolti"
+        display_date: "Estremi cronologici"
+      creator:
+        creator_corporate_type: "Tipologia ente"
+        creator_type: "Tipologia"
+        history: "Profilo storico / Biografia"
+        preferred_event: "Estremi cronologici"
+        residence: "Sede"
+        abstract: "Abstract"
+        history: "Profilo storico / Biografia"
+        C: "Ente"
+        P: "Persona"
+        F: "Famiglia"
+        other_names: "Altre denominazioni"
+      custodian:
+        history: "Cenni storico istituzionali"
+        holdings: "Patrimonio"
+        collecting_policies: "Politiche di gestione e di acquisizione"
+        accessibility: "Orari e indicazioni per l'accesso ai fondi"
+        services: "Servizi"
+        contacts: "Contatti"
+        headquarter_address: "Sede legale"
+        custodian_other_buildings: "Altre sedi"
