--- a/config/locales/views/creators.yml
+++ b/config/locales/views/creators.yml
@@ -110,4 +110,5 @@ it:
   linked_creators: "Soggetti produttori"
   creator_editor: "Compilatore"
   creator_editors: "Compilatori"
+  preferred_event: "Estremi cronologici"
   
