--- a/config/locales/views/digital_objects.yml
+++ b/config/locales/views/digital_objects.yml
@@ -1,9 +1,8 @@
 en:
-  new_digital_object: "New digital object"
+  new_digital_object: "New digital objects"
   digital_objects: "Digital objects"
   digital_object: "Digital object"
   index_digital_objects: "Digital objects list"
-  upload_file: "Upload file"
   digital_objects_type: "Type"
   digital_objects_title: "Title"
   digital_objects_description: "Description"
@@ -19,12 +18,19 @@ en:
   digital_objects_file_name: "Filename"
   format: "Format"
   all: "all"
+  add_files: "Add files&hellip;"
+  start_upload: "Start upload"
+  cancel_upload: "Cancel upload"
+  delete_files: "Delete files"
+  delete_selected_files: "Delete selected files"
+  error: "Error"
+  zoom_in: "Zoom in"
+  download: "Download"
 it:
-  new_digital_object: "Aggiungi oggetto digitale"
+  new_digital_object: "Nuovi oggetti digitali"
   digital_objects: "Oggetti digitali"
   digital_object: "Oggetto digitale"
   index_digital_objects: "Lista oggetti"
-  upload_file: "Carica file"
   digital_objects_type: "Tipologia"
   digital_objects_title: "Titolo"
   digital_objects_description: "Descrizione"
@@ -40,3 +46,11 @@ it:
   digital_objects_file_name: "Nome del file"
   format: "Formato"
   all: "Tutte le schede"
+  add_files: "Aggiungi file&hellip;"
+  start_upload: "Avvia upload"
+  cancel_upload: "Annulla upload"
+  delete_files: "Elimina file"
+  delete_selected_files: "Elimina file selezionati"
+  error: "Errore"
+  zoom_in: "Ingrandisci"
+  download: "Scarica"
