--- a/config/locales/views/creator_corporate_types.yml
+++ b/config/locales/views/creator_corporate_types.yml
@@ -3,4 +3,4 @@ en:
   creator_corporate_type: "Creator corporate types"
 it:
   listing_creator_corporate_types: "Tipologie ente"
-  creator_corporate_type: "tipologia"
+  creator_corporate_type: "Tipologia ente"
